# Tmagine

./: CMakeLists.txt  Tmagine.pch  main.cpp
Code/DialogueSorter/: Dialogue.cpp  Dialogue.h
Code/FlagKeeper/: FlagKeeper.cpp  FlagKeeper.h
Code/LineReader/: LineReader.cpp  LineReader.h  LineReaderDefs.h
Code/Termbox2/: termbox.c  termbox.h
Libs/: CMakeLists.txt
